lab7/canary/destination-rule.yaml
#define version-based policies

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dateapi-destination-rule
spec:
  host: dateapi
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
